fix: add -webkit-overflow-scrolling: touch to scroll-container

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -278,6 +278,7 @@ a {
 .scroll-container {
   overflow-y: scroll;
   overscroll-behavior-y: contain;
+  -webkit-overflow-scrolling: touch;
 }
 
 // Hide scrollbar globally
